# crypto-skills-mcp

./: .gitignore  CHANGELOG.md  CI_CIRCULAR_DEPENDENCY_FIX.md  CI_FINAL_FIX.md  CI_FIX_PHASE_1-5_COMPLETE.md  CI_FIX_REPORT.md  CI_FIX_SUCCESS_CONFIRMATION.md  CI_FIX_VERIFICATION.md  CI_ROOT_CAUSE_FIX.md  CONTRIBUTING.md  DEPENDENCY_MIGRATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  LICENSE  PHASE5_TESTING_COMPLETE.md  POST_SESSION_IMPROVEMENTS.md  README.md  SESSION_COMPLETE_VALIDATION_FIXES.md  SESSION_COMPLETION_REPORT.md  SESSION_STATUS_PHASE2_COMPLETE.md  TEST.txt  TESTING_DEVICE_FIX.md  TESTING_DEVICE_UPDATE_INSTRUCTIONS.md  TEST_STATUS_2025-01-26.md  TEST_STATUS_REPORT.md  TEST_SUITE_COMPLETE.md  THESIS_FIXES_APPLIED.md  apply_phase3_fixes.py  apply_test_fixes.py  claude.json.example  cli.py  debug_extremes.py  debug_import.py  fix_thesis.py  fix_tokenomics.py  fix_vc_analyst_output.py  fix_vc_analyst_tests.py  format_code.bat  format_code.ps1  install_to_claude.py  (+11 more)
.github/workflows/: lint.yml  release.yml  tests.yml
agents/: __init__.py  crypto_macro_analyst.py  crypto_sentiment_analyst.py  crypto_vc_analyst.py  thesis_synthesizer.py
config/modes/: agents_only.yaml  hybrid.yaml  skills_only.yaml
core/: __init__.py  config_loader.py  router.py
docs/: ACTION_MAPPING_PATTERNS.md  PHASE4_COMPLETION_REPORT.md  SKILLS_ARCHITECTURE.md  crypto-skills-mcp-optimization-report.md
examples/: agents_demo.py  config_demo.py  production_usage.py
scripts/: __init__.py  post_install.py  validate_install.py
skills/: __init__.py  batch_analysis.py
skills/data_extraction/: SKILL.md  __init__.py  aggregate_sentiment.py  calculate_indicators.py  development_activity_tracker.py  fetch_ohlcv.py  fetch_order_book.py  institutional_flow_tracker.py  risk_calculator.py
skills/sentiment_analysis/: SKILL.md  __init__.py  news_sentiment_scorer.py  sentiment_fusion.py  social_sentiment_tracker.py  whale_activity_monitor.py
skills/technical_analysis/: SKILL.md  __init__.py  momentum_scoring.py  pattern_recognition.py  support_resistance.py  volatility_analysis.py
tests/: __init__.py  test_skills_integration.py
tests/test_agents/: __init__.py  test_agent_integration.py  test_macro_analyst.py  test_sentiment_analyst.py  test_thesis_synthesizer.py  test_vc_analyst.py
tests/test_skills/: test_batch_analysis.py
tests/test_skills/test_data_extraction/: test_aggregate_sentiment.py  test_calculate_indicators.py  test_development_activity_tracker.py  test_fetch_ohlcv.py  test_fetch_order_book.py  test_institutional_flow_tracker.py  test_risk_calculator.py
tests/test_skills/test_sentiment_analysis/: test_news_sentiment_scorer.py  test_sentiment_fusion.py  test_social_sentiment_tracker.py  test_whale_activity_monitor.py
tests/test_skills/test_technical_analysis/: test_momentum_scoring.py  test_pattern_recognition.py  test_support_resistance.py  test_volatility_analysis.py
